--- a/react/01_folder/src/index.css
+++ b/react/01_folder/src/index.css
@@ -22,6 +22,7 @@ background-color: black;
   padding: 20px;
   text-align: center;
   width: 300px;
+  height: 400px;
   background-color: #333;
   margin: 20px;
 }
@@ -50,5 +51,13 @@ background-color: black;
 
 .Card p{
   margin: 20px 0px;
+
+}
+
+.Card img{
+  width: 70%;
+  height: 40%;
+  
+
 
 }
